--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Name Website</title>
     <link rel="stylesheet" href="/assets/css/main.css">
     <script src="/assets/js/app.js"></script>
     <script src="/assets/js/ui.js"></script>
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    ciao
+    <h1>Dynamic cache PWA</h1>
 </body>
 
 </html>
